--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <img class="profile-picture gradient" src="./Snapinsta.app_150195742_844698516094972_4973173981146626722_n_1080.jpg" alt="foto de perfil">
             <h1 class="usarname">Ryan Linhares</h1>
-            <p class="description">kasdkaksdkaskdaksdk</p>
+            <p class="description">Desenvolvedor Web</p>
         </header>
         <ul class="list">
             <li class="list-item gradient">
